--- a/sources/frontend/src/app/views/profils/profil-table/profil-table.html
+++ b/sources/frontend/src/app/views/profils/profil-table/profil-table.html
@@ -2,7 +2,11 @@
 <table mat-table [dataSource]="profils.value()" class="mat-elevation-z8">
   <ng-container matColumnDef="libelle">
     <th mat-header-cell *matHeaderCellDef>Libelle du profil</th>
-    <td mat-cell *matCellDef="let element">{{ element.libelle }}</td>
+    <td mat-cell *matCellDef="let element">
+      <a [routerLink]="[element.id]">
+        {{ element.libelle }}
+      </a>
+    </td>
   </ng-container>
 
   <ng-container matColumnDef="nombreUtilisateurs">
