Formulaire de modification du profil

--- a/sources/frontend/src/app/components/display-field/display-field.html
+++ b/sources/frontend/src/app/components/display-field/display-field.html
@@ -1,8 +1,8 @@
-<div>
-  <span>
-    {{ field().label }}
+<div class="field">
+  <span class="field-label">
+    {{ label() }}
   </span>
-  <span>
-    {{ fieldValue() }}
+  <span class="field-value">
+    {{ value() }}
   </span>
 </div>
