--- a/sources/frontend/src/app/views/profils/detail/profil-detail/profil-detail.html
+++ b/sources/frontend/src/app/views/profils/detail/profil-detail/profil-detail.html
@@ -1,5 +1,8 @@
 @if(profil.hasValue()){
-<app-profil-informations [profil]="profil.value()"></app-profil-informations>
+<app-profil-informations
+  [profil]="profil.value()"
+  (saved)="saved($event)"
+></app-profil-informations>
 <app-profil-utilisateurs
   [utilisateurs]="profil.value().utilisateurs ?? []"
 ></app-profil-utilisateurs>
