--- a/sources/frontend/src/app/views/profils/profil-table/profil-table.html
+++ b/sources/frontend/src/app/views/profils/profil-table/profil-table.html
@@ -3,9 +3,7 @@
   <ng-container matColumnDef="libelle">
     <th mat-header-cell *matHeaderCellDef>Libelle du profil</th>
     <td mat-cell *matCellDef="let element">
-      <a [routerLink]="[element.id]">
-        {{ element.libelle }}
-      </a>
+      {{ element.libelle }}
     </td>
   </ng-container>
 
@@ -14,5 +12,10 @@
     <td mat-cell *matCellDef="let element">{{ element.nombreUtilisateurs }}</td>
   </ng-container>
   <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  <tr
+    mat-row
+    *matRowDef="let row; columns: displayedColumns"
+    [routerLink]="[row.id]"
+    aria-details="Redirige vers la page de détail du profil"
+  ></tr>
 </table>
