Mise à jour des dépendances et ajout de nouveaux composants d'entrée

--- a/sources/frontend/src/app/components/display-field/display-field.html
+++ b/sources/frontend/src/app/components/display-field/display-field.html
@@ -1,8 +1,8 @@
 <div class="field">
-  <span class="field-label">
+  <div class="field-label">
     {{ label() }}
-  </span>
-  <span class="field-value">
-    {{ value() }}
-  </span>
+  </div>
+  <p class="field-value">
+    {{ _value() }}
+  </p>
 </div>
