Ajout d'un menu et d'une toolbar

--- a/sources/frontend/src/app/app.css
+++ b/sources/frontend/src/app/app.css
@@ -1,3 +1,13 @@
+:host {
+  --mat-sidenav-container-width: 100px;
+}
+
 main {
   margin: 1rem;
+}
+
+.menu-container {
+  border-radius: 0;
+  border-right-width: 0;
+  position: fixed;
 }
