--- a/sources/frontend/src/app/components/input-text/input-text.html
+++ b/sources/frontend/src/app/components/input-text/input-text.html
@@ -6,5 +6,5 @@
     [formControl]="control()"
     [required]="fieldEntry().isRequired"
   />
+  <mat-error [control]="control()" />
 </mat-form-field>
-<app-input-errors [control]="control()" />
