--- a/sources/frontend/src/app/components/input-number/input-number.html
+++ b/sources/frontend/src/app/components/input-number/input-number.html
@@ -10,4 +10,4 @@
     (paste)="paste($event)"
   />
 </mat-form-field>
-<app-input-errors [control]="control()" />
+<mat-error [control]="control()" />
