--- a/sources/frontend/src/app/components/input-text-document/input-text-document.html
+++ b/sources/frontend/src/app/components/input-text-document/input-text-document.html
@@ -2,4 +2,4 @@
   <mat-label>{{ label() }}</mat-label>
   <textarea matInput [formControl]="control()" rows="50" required></textarea>
 </mat-form-field>
-<app-input-errors [control]="control()" />
+<mat-error [control]="control()" />
