Revert "Override MatError"
This reverts commit bb52eb932b56d8ed7b7021a7fe2a45946af3a47c.

--- a/sources/frontend/src/app/components/input-number/input-number.html
+++ b/sources/frontend/src/app/components/input-number/input-number.html
@@ -10,4 +10,4 @@
     (paste)="paste($event)"
   />
 </mat-form-field>
-<mat-error [control]="control()" />
+<app-input-errors [control]="control()" />
