Refactor input error handling and remove unused MatError imports

--- a/sources/frontend/src/app/components/input-number/input-number.html
+++ b/sources/frontend/src/app/components/input-number/input-number.html
@@ -9,5 +9,7 @@
     (keypress)="keypress($event)"
     (paste)="paste($event)"
   />
+  <mat-error>
+    <app-input-errors [control]="control()" />
+  </mat-error>
 </mat-form-field>
-<app-input-errors [control]="control()" />
