--- a/sources/frontend/src/app/components/input-text-document/input-text-document.html
+++ b/sources/frontend/src/app/components/input-text-document/input-text-document.html
@@ -1,5 +1,8 @@
 <mat-form-field appearance="outline" class="full-width">
   <mat-label>{{ label() }}</mat-label>
   <textarea matInput [formControl]="control()" rows="50" required></textarea>
+
+  <mat-error>
+    <app-input-errors [control]="control()" />
+  </mat-error>
 </mat-form-field>
-<app-input-errors [control]="control()" />
