--- a/sources/frontend/src/app/components/input-text/input-text.html
+++ b/sources/frontend/src/app/components/input-text/input-text.html
@@ -6,5 +6,7 @@
     [formControl]="control()"
     [required]="fieldEntry().isRequired"
   />
+  <mat-error>
+    <app-input-errors [control]="control()" />
+  </mat-error>
 </mat-form-field>
-<app-input-errors [control]="control()" />
