--- a/sources/frontend/src/app/components/input-errors/input-errors.html
+++ b/sources/frontend/src/app/components/input-errors/input-errors.html
@@ -1,7 +1,5 @@
 @if (control().hasError('required')) {
-<mat-error>Ce champ est obligatoire</mat-error>
-} @else if (control().hasError('formatError') ) {
-<mat-error>
+  Ce champ est obligatoire
+} @else if (control().hasError('formatError')) {
   {{ control().getError('formatError')?.issues[0].message }}
-</mat-error>
 }
