Implémentation module "Utilisateurs"

--- a/sources/frontend/src/app/layout/menu/menu.html
+++ b/sources/frontend/src/app/layout/menu/menu.html
@@ -15,5 +15,9 @@
       <mat-icon>settings</mat-icon>
       <span>Profiles</span>
     </li>
+    <li matRipple routerLink="/utilisateurs" class="menu-item" routerLinkActive="active">
+      <mat-icon>people</mat-icon>
+      <span>Utilisateurs</span>
+    </li>
   </ul>
 </nav>
