--- a/sources/frontend/src/app/views/profils/detail/profil-utilisateurs/profil-utilisateurs.css
+++ b/sources/frontend/src/app/views/profils/detail/profil-utilisateurs/profil-utilisateurs.css
@@ -16,7 +16,11 @@
   background-color: #ffffff;
   border-radius: 8px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.05);
-  transition: box-shadow 0.3s ease, transform 0.2s ease;
+  transition:
+    box-shadow 0.3s ease,
+    transform 0.2s ease;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 .utilisateur-item:hover {
