Possibilité de passer des propriétés pour l'input dans InputProps

--- a/sources/frontend/src/app/components/field-for/field-for.html
+++ b/sources/frontend/src/app/components/field-for/field-for.html
@@ -1,3 +1,5 @@
-@if(isEdit()){
-<app-input-for [control]="control()" [fieldEntry]="fieldEntry()" />
-} @else{ <app-display-for [control]="control()" [fieldEntry]="fieldEntry()" /> }
+@if (isEdit()) {
+  <app-input-for [control]="control()" [fieldEntry]="fieldEntry()" [inputProps]="inputProps()" />
+} @else {
+  <app-display-for [control]="control()" [fieldEntry]="fieldEntry()" />
+}
