--- a/sources/frontend/src/app/views/utilisateurs/utilisateur-informations-form/utilisateur-informations-form.html
+++ b/sources/frontend/src/app/views/utilisateurs/utilisateur-informations-form/utilisateur-informations-form.html
@@ -18,6 +18,7 @@
     [control]="utilisateurForm().controls.dateNaissance"
     [fieldEntry]="UtilisateurWriteEntity.dateNaissance"
     [isEdit]="isEdit()"
+    [inputProps]="dateNaissanceInputProps"
   />
   <app-field-for
     [control]="utilisateurForm().controls.adresse"
